; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/src/extr_stm32f4xx_it.c_EXTI15_10_IRQHandler.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/src/extr_stm32f4xx_it.c_EXTI15_10_IRQHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ETH_LINK_EXTI_LINE = common dso_local global i32 0, align 4
@RESET = common dso_local global i64 0, align 8
@BOARD_PHY_ADDRESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EXTI15_10_IRQHandler() #0 {
  %1 = load i32, i32* @ETH_LINK_EXTI_LINE, align 4
  %2 = call i64 @EXTI_GetITStatus(i32 %1)
  %3 = load i64, i64* @RESET, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i32, i32* @BOARD_PHY_ADDRESS, align 4
  %7 = call i32 @Eth_Link_ITHandler(i32 %6)
  %8 = load i32, i32* @ETH_LINK_EXTI_LINE, align 4
  %9 = call i32 @EXTI_ClearITPendingBit(i32 %8)
  br label %10

10:                                               ; preds = %5, %0
  ret void
}

declare dso_local i64 @EXTI_GetITStatus(i32) #1

declare dso_local i32 @Eth_Link_ITHandler(i32) #1

declare dso_local i32 @EXTI_ClearITPendingBit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
